Fixed for flyin tween making a scrollbar.

--- a/css/theme.css
+++ b/css/theme.css
@@ -209,7 +209,13 @@ box-shadow: 0px 3px 3px rgba(0,0,0,.1);
 	padding: 5% 5% 10%;
 	color:#FFF;
 	text-shadow:0px 2px 1px rgba(0,0,0,.2);
-	margin-top:2em;
+	margin-top:1em;
+}
+#example {
+	overflow: hidden;
+}
+#example-text, #example-pic {
+	position: relative;
 }
 #example-container {
 	position: relative;
